# raylib-game

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
include/: minmax.h
res/src/: Btn-Case.aseprite  bad-diamond.aseprite  button.aseprite  cursor.aseprite  diamond.aseprite  logo.aseprite
src/: AtlasManager.cpp  AtlasManager.hpp  Player.cpp  Player.h  Player.hpp  Scene.cpp  Scene.h  Scene.hpp  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SceneManager.hpp  globals.cpp  globals.h  globals.hpp  gui_Debug.hpp  main.cpp
src/scenes/: Game.cpp  Game.h  Game.hpp  Intro.cpp  Intro.hpp  Menu.cpp  Menu.h  Menu.hpp
